--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 
 * Library Information
   - Name :: UltravioletDetectorInterface
-  - Version :: 2.0.0
+  - Version :: 2.0.1
   - License :: BSD
   - URL :: https://github.com/janelia-arduino/UltravioletDetectorInterface
   - Author :: Peter Polidoro
@@ -16,38 +16,46 @@
 
 * API NAMES
 
-  #+BEGIN_SRC js
-    {
-      "id": "getApi",
-      "result": {
-        "firmware": [
-          "UltravioletDetectorInterface"
-        ],
-        "verbosity": "NAMES",
-        "functions": [
-          "getDetectorInfo",
-          "getStatus",
-          "lampIsOn",
-          "isAutozeroing",
-          "getWavelengthRange",
-          "getWavelengths",
-          "setWavelengths",
-          "getAbsorbances"
-        ],
-        "parameters": [
-          "wavelengths"
-        ],
-        "callbacks": [
-          "turnLampOn",
-          "turnLampOff",
-          "autozero",
-          "playShortTone",
-          "playMediumTone",
-          "playLongTone"
-        ]
+#+BEGIN_SRC js
+{
+  "id": "getAPI",
+  "result": {
+    "ancestors": [
+      "ModularServer",
+      "ModularDeviceBase",
+      "SerialInterface"
+    ],
+    "firmware": [
+      {
+        "name": "UltravioletDetectorInterface",
+        "version": "2.0.1"
       }
-    }
-  #+END_SRC
+    ],
+    "verbosity": "NAMES",
+    "functions": [
+      "getDetectorInfo",
+      "getStatus",
+      "lampIsOn",
+      "isAutozeroing",
+      "getWavelengthRange",
+      "getWavelengths",
+      "setWavelengths",
+      "getAbsorbances"
+    ],
+    "parameters": [
+      "wavelengths"
+    ],
+    "callbacks": [
+      "turnLampOn",
+      "turnLampOff",
+      "autozero",
+      "playShortTone",
+      "playMediumTone",
+      "playLongTone"
+    ]
+  }
+}
+#+END_SRC
 
 * API GENERAL
 
@@ -73,6 +81,131 @@
 
   [[https://github.com/janelia-modular-devices/modular-devices]]
 
-* Installation Instructions
+* Host Computer Setup
 
-  [[https://github.com/janelia-arduino/arduino-libraries]]
+** Download this repository
+
+[[https://github.com/janelia-arduino/UltravioletDetectorInterface.git]]
+
+#+BEGIN_SRC sh
+git clone https://github.com/janelia-arduino/UltravioletDetectorInterface.git
+#+END_SRC
+
+** PlatformIO
+
+*** Install PlatformIO Core
+
+[[https://docs.platformio.org/en/latest/core/installation/index.html]]
+
+#+BEGIN_SRC sh
+python3 -m venv .venv
+source .venv/bin/activate
+pip install pip --upgrade
+pip install platformio
+pio --version
+#+END_SRC
+
+*** 99-platformio-udev.rules
+
+Linux users have to install udev rules for PlatformIO supported boards/devices.
+
+**** Download udev rules file to /etc/udev/rules.d
+
+#+BEGIN_SRC sh
+curl -fsSL https://raw.githubusercontent.com/platformio/platformio-core/develop/platformio/assets/system/99-platformio-udev.rules | sudo tee /etc/udev/rules.d/99-platformio-udev.rules
+#+END_SRC
+
+**** Restart udev management tool
+
+#+BEGIN_SRC sh
+sudo service udev restart
+#+END_SRC
+
+**** Add user to groups
+
+#+BEGIN_SRC sh
+sudo usermod -a -G dialout $USER && sudo usermod -a -G plugdev $USER
+#+END_SRC
+
+**** Remove modemmanager
+
+#+BEGIN_SRC sh
+sudo apt-get purge --auto-remove modemmanager
+#+END_SRC
+
+**** After setting up rules and groups
+
+You will need to log out and log back in again (or reboot) for the user group changes to take effect.
+
+After this file is installed, physically unplug and reconnect your board.
+
+*** Compile the firmware
+
+**** Gnu/Linux
+
+#+BEGIN_SRC sh
+make firmware
+#+END_SRC
+
+**** Other
+
+#+BEGIN_SRC sh
+pio run -e teensy31
+#+END_SRC
+
+*** Upload the firmware
+
+**** Gnu/Linux
+
+#+BEGIN_SRC sh
+make upload
+#+END_SRC
+
+**** Other
+
+#+BEGIN_SRC sh
+pio run -e teensy31 -t upload
+#+END_SRC
+
+*** Serial Terminal Monitor
+
+**** Gnu/Linux
+
+#+BEGIN_SRC sh
+make monitor
+#+END_SRC
+
+**** Other
+
+#+BEGIN_SRC sh
+pio device monitor --echo --eol=LF
+#+END_SRC
+
+**** get API in terminal monitor
+
+#+BEGIN_SRC sh
+getAPI NAMES ["UltravioletDetectorInterface"]
+#+END_SRC
+
+
+
+** Arduino Ide
+
+*** Download
+
+[[https://www.arduino.cc/en/software]]
+
+*** Additional Boards Manager URLs
+
+File > Preferences
+
+#+BEGIN_EXAMPLE
+https://www.pjrc.com/teensy/package_teensy_index.json
+https://github.com/earlephilhower/arduino-pico/releases/download/global/package_rp2040_index.json
+#+END_EXAMPLE
+
+*** Add Board Support Packages
+
+- Teensy by Paul Stroffregen
+- Raspberry Pi Pico/RP2040 by Earle F Philhower, III
+
